--- a/Practica4.html
+++ b/Practica4.html
@@ -1,3 +1,34 @@
+<!-- 
+<html>
+    <head>
+        <title>
+            Practica 2 js
+        </title>
+    </head>
+<body>
+    <script>
+        document.write("Mi nombre es Joel Abreu");
+        document.write('<br>');
+        document.write("Y tengo 17 años")
+    </script>
+</body>
+</html>
+-----------------------------------------------------
+<html>
+<head>
+    <title>Practica 3 js</title>
+</head>
+<body>
+    <script>
+        var empleado='Edgar';
+        var salario= 100000;
+        document.write(empleado);
+        document.write('<br>');
+        document.write(salario);
+      </script>
+</body>
+</html>
+-->
 <html>
 <head>
     <title>Practica 4 js</title>
